# ToolEngine

./: .gitignore  .gitmodules  LICENSE  README.md  cmake_build_2022.bat  cmake_generate_2022.bat
.github/workflows/: build_windows.yml
doc/: design.md  todo.md
engine/: CMakeLists.txt
engine/client/: CMakeLists.txt  client_framework.cpp  client_framework.h  main.cpp
engine/core/: CMakeLists.txt
engine/core/include/common/: depth_support_details.h  log_manager.h  log_manager.ixx  log_system.h  macro.h  queue_family_indices.h  swap_chain_support_details.h
engine/core/include/file/: asset_manager.h  asset_manager.ixx  binding_manager.ixx  file_utils.h  stb_image.h
engine/core/include/global/: global_context.h  global_context.ixx  macro.h
engine/core/include/logic/: input_manager.h  input_manager.ixx  timer.h  timer.ixx
engine/core/include/math/: matrix_test.ixx  transform.h  transform.ixx  vector3.h
engine/core/include/render/: blit_pipeline.h  global_render_context.h  graphics_pipeline.h  pipeline_state.h  render.h  render.ixx
engine/core/include/render/camera/: render_camera.h  render_camera.ixx
engine/core/include/render/gui/: detail_panel.ixx
engine/core/include/render/model/: model.h  model.ixx
engine/core/include/render/pass/: forward_pass.h  forward_pass.ixx  imgui_pass.ixx
engine/core/include/render/pipeline/: blit_pipeline.h  blit_pipeline.ixx  graphics_pipeline.h  graphics_pipeline.ixx
engine/core/include/render/resources/: depth_resources.h  depth_resources.ixx  render_resources.h  render_resources.ixx  texture_resources.h
engine/core/include/render/scene/: render_scene.h  render_scene.ixx
engine/core/include/rhi/: buffer.h  buffer.ixx  buffer_utils.ixx  command_buffer.h  command_buffer.ixx  command_pool.h  command_pool.ixx  debug_utils.h  debug_utils.ixx  depth_resources.h  depth_support_details.h  depth_support_details.ixx  descriptor_pool.h  descriptor_pool.ixx  descriptor_set.h  descriptor_set.ixx  descriptor_set_layout.h  descriptor_set_layout.ixx  descriptor_sets.h  descriptor_sets.ixx  descriptor_type.ixx  device.h  device.ixx  frame_buffer.h  frame_buffer.ixx  image.h  image.ixx  image_view.h  image_view.ixx  index.h  index.ixx  index_buffer.h  index_buffer.ixx  instance.h  instance.ixx  physical_device.h  physical_device.ixx  pipeline.h  pipeline.ixx  pipeline_layout.h  (+27 more)
engine/core/include/vulkan/: vulkan_core.h
engine/core/include/window/: glfw_window.h  glfw_window.ixx  window.ixx
engine/core/src/common/: log_manager.cpp  log_manager.cppm  log_system.cpp
engine/core/src/file/: asset_manager.cpp  asset_manager.cppm  binding_manager.cppm  file_utils.cpp
engine/core/src/global/: global_context.cpp  global_context.cppm
engine/core/src/logic/: input_manager.cpp  input_manager.cppm  timer.cpp  timer.cppm
engine/core/src/math/: matrix_test.cppm  transform.cpp  transform.cppm  vector3.cpp
engine/core/src/render/: blit_pipeline.cpp  global_render_context.cpp  graphics_pipeline.cpp  pipeline_state.cpp  render.cpp  render.cppm
engine/core/src/render/camera/: render_camera.cpp  render_camera.cppm
engine/core/src/render/gui/: detail_panel.cppm
engine/core/src/render/model/: model.cpp  model.cppm
engine/core/src/render/pass/: forward_pass.cpp  forward_pass.cppm  imgui_pass.cppm
engine/core/src/render/pipeline/: blit_pipeline.cpp  blit_pipeline.cppm  graphics_pipeline.cpp  graphics_pipeline.cppm
engine/core/src/render/resources/: depth_resources.cpp  depth_resources.cppm  render_resources.cpp  render_resources.cppm  texture_resources.cpp
engine/core/src/render/scene/: render_scene.cpp  render_scene.cppm
engine/core/src/rhi/: buffer.cpp  buffer.cppm  buffer_utils.cppm  command_buffer.cpp  command_buffer.cppm  command_pool.cpp  command_pool.cppm  debug_utils.cpp  debug_utils.cppm  depth_resources.cpp  depth_support_details.cppm  descriptor_pool.cpp  descriptor_pool.cppm  descriptor_set.cpp  descriptor_set.cppm  descriptor_set_layout.cpp  descriptor_set_layout.cppm  descriptor_sets.cpp  descriptor_sets.cppm  descriptor_type.cppm  device.cpp  device.cppm  frame_buffer.cpp  frame_buffer.cppm  image.cpp  image.cppm  image_view.cpp  image_view.cppm  index.cpp  index.cppm  index_buffer.cpp  index_buffer.cppm  instance.cpp  instance.cppm  physical_device.cpp  physical_device.cppm  pipeline.cpp  pipeline.cppm  pipeline_layout.cpp  pipeline_layout.cppm  (+25 more)
engine/core/src/window/: glfw_window.cpp  glfw_window.cppm  window.cpp  window.cppm
engine/models/: SphereWithCube.gltf
engine/scene/: CMakeLists.txt  application.cpp  application.h  glfw_window.cpp  glfw_window.h  gltf_loader.cpp  gltf_loader.h  queue_family_indices.h  render.cpp  render.h  scene.cpp  scene.h  scene_view.cpp  scene_view.h  swap_chain_support_details.h  window.cpp  window.h
engine/scene/include/: application.h  application.ixx
engine/scene/include/asset_pipeline/: gltf_loader.h  gltf_loader.ixx
engine/scene/include/scene_system/: camera_manager.ixx  level_manager.ixx  scene.h  scene.ixx  scene_state.ixx
engine/scene/src/: application.cpp  application.cppm
engine/scene/src/asset_pipeline/: gltf_loader.cpp  gltf_loader.cppm
engine/scene/src/scene_system/: camera_manager.cpp  camera_manager.cppm  level_manager.cpp  level_manager.cppm  scene.cpp  scene.cppm  scene_state.cppm
engine/shaders/: shader.frag  shader.vert  shader_compile.bat
engine/shaders/spv/: frag.spv  vert.spv
engine/shaders/src/: shader.frag  shader.vert
scripts/: cmake_build_2022.bat  cmake_generate_2019.bat  shader_compile.bat  shader_compile_rog.bat
